welcome.lessons.welcome.array.island.Island.scala.error
island:6: error: value &&! is not a member of Boolean
  for (i <- 0 to num.length-1) {var a = num(i);if (a==2&&!b2) {c2= c2+1;b2=true;b1=false};if (a==1&&!b1) {c1=c1+1;b1=true;b2=false}}
                                                       ^island:6: error: value &&! is not a member of Boolean
  for (i <- 0 to num.length-1) {var a = num(i);if (a==2&&!b2) {c2= c2+1;b2=true;b1=false};if (a==1&&!b1) {c1=c1+1;b1=true;b2=false}}
                                                                                                  ^